# SimonSays

./: .gitignore  FinalProject-041037946.cpp  sound2.flac
Source Files/: CMakeLists.txt  FinalProject-041037946.h  README.md  form.txt  sound1.flac  sound3.flac  sound4.flac
